--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -173,7 +173,7 @@
     <header class="invoice-header">
         <div class="company-info">
         <h1>{{companyControl.name}}</h1>
-        <p>{{companyControl.street}} {{companyControl.number}}<br>{{companyControl.postcode}} {{companyControl.city}} </p>
+        <p>{{companyControl.street}} {{companyControl.number}}<br>{{companyControl.postCode}} {{companyControl.city}} </p>
         </div>
         <a href="/" class="logo">
         <img width="60" height="60" src="./assets/SK-metatag.png" alt="Start in Krypto">
