--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,19 @@
-
-<main>    
+@if (isLoginPage) {
+  <app-login></app-login>
+} @else {
+  <main>
     <app-navbar></app-navbar>
+
     <div class="main-content">
-        <app-header></app-header>
-        <router-outlet></router-outlet>
+      <app-header></app-header>
+      <router-outlet></router-outlet>
     </div>
+
     <app-toast
-        [ngClass]="{'show-success': stateControl.showToast,'show-error': stateControl.showError}">
-      </app-toast>
-</main>
+      [ngClass]="{
+        'show-success': stateControl.showToast,
+        'show-error': stateControl.showError
+      }"
+    ></app-toast>
+  </main>
+}
