--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,3 +165,10 @@ app-invoice {
   color: red;
   font-weight: bold;
 }
+
+app-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh;
+}
