--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,5 +1,5 @@
 <img width="45px" height="45px" class="message" src="/assets/bell.svg" alt="Nachrichten">
 
-<button>
+<button (click)="logOut()">
     <img width="40px" height="40px" class="profile-img" src="/assets/profile.svg" alt="Profile">
 </button>
