ErrorHandling for customers works

--- a/src/app/customers/customers.html
+++ b/src/app/customers/customers.html
@@ -23,7 +23,7 @@
             </tr>
         </thead>
         <tbody class="">
-             @for (customer of customer(); track customer.id) {
+             @for (customer of customers(); track customer.id) {
             <tr>
                 <td>{{ customer.customer_number }}</td>
                 <td>{{ customer.title }}</td>
