--- a/src/app/customers/customers.html
+++ b/src/app/customers/customers.html
@@ -24,7 +24,7 @@
         </thead>
         <tbody class="">
              @for (customer of customers(); track customer.id) {
-            <tr>
+            <tr class="table">
                 <td>{{ customer.customer_number }}</td>
                 <td>{{ customer.title }}</td>
                 <td>{{ customer.first_name }}</td>
@@ -38,10 +38,23 @@
                 <td>{{ customer.has_portfolio }}</td>
                 <td>{{ customer.has_subscription }}</td>
                 <td>{{ customer.invoices }}</td>
-                <td>
-                    <button class="crmSK-icon-three-dots">
+                <td class="crmSK-td-edit">
+                    <button class="crmSK-icon-three-dots" (click)="toggleMenu(customer.id)">
                         <img src="/assets/three.svg" alt="edit">
                     </button>
+
+                    <ul role="menu" class="crmSK-popper" [class.show]="openMenuId === customer.id">
+                        <li class="crmSK-popper-li">
+                            Bearbeiten
+                        </li>
+                        <li class="crmSK-popper-li">
+                            Löschen
+                        </li>
+                        <li class="crmSK-popper-li">
+                            Kommentar hin. 
+                        </li>
+                    </ul>
+
                 </td>
             </tr>
             }
