--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,7 +64,8 @@ app-dashboard,
 app-apply,
 app-newcustomer,
 app-invoices,
-app-customers {
+app-customers,
+app-customer-details {
     margin: 1rem;
     padding: 0 1rem 1rem 1rem;
 }
