--- a/src/app/customers/customers.html
+++ b/src/app/customers/customers.html
@@ -44,13 +44,13 @@
                     </button>
 
                     <ul role="menu" class="crmSK-popper" [class.show]="openMenuId === customer.id">
-                        <li class="crmSK-popper-li">
-                            Bearbeiten
+                        <li class="crmSK-popper-li" [routerLink]="['/kunden', customer.id]">
+                            Ansehen
                         </li>
                         <li class="crmSK-popper-li">
                             Löschen
                         </li>
-                        <li class="crmSK-popper-li">
+                        <li class="crmSK-popper-li" [routerLink]="['/kunden', customer.id, 'comments']">
                             Kommentar hin. 
                         </li>
                     </ul>
@@ -61,5 +61,6 @@
 
         </tbody>
     </table>
+    <router-outlet></router-outlet>
     <a href="/neu-kunde" class="new-customer">Neuer Kunde Anlegen</a>
 </section>
